# token-text

./: app.py  main.py  pyproject.toml  token_data_filter.py  tokens_list.json
api/: api_utils.py
data/: cgtokens.csv  tokenList_api.csv
results/: matched_token.json  token_price_info.json
token_scripts/: charting.py  format.py  suggest_token.py  token_id.py  token_pairs.py  token_price.py
